syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.bank.bankify";
option java_outer_classname = "BankifySocialImpl";

//Camila Chapetzan Antunes
package bankify;

//Service for Bankify Social user list
service BankSocial {
  rpc AddSocialUser (NewSocialUserData) returns (BankReply) {} // add an user to the social list
}

// The basic answer message from bankify
message BankReply {
  string message = 1;
}

// Message with all the necessary data for a new social user
message NewSocialUserData {
  string firstName = 1;
  string lastName = 2;
  string id = 3;
  string gender = 4;
  string email = 5;
  string password = 6;
  string phone = 8;
  string address = 9;
}